--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -14,13 +14,15 @@ h1 {
 
 main {
     display: grid;
-    grid-template-columns: repeat(9, 1fr);
-    grid-template-rows: repeat(16, 1fr);
+    /* BEFORE: 9 columns, 16 rows */
+    /* NOW: 6 columns, */
+    grid-template-columns: 1fr 1fr 1fr 10rem 1fr 10rem 1fr 1fr 1fr;
+    grid-template-rows: 1fr repeat(2, 2.5rem) 5.7rem repeat(4, 6rem) repeat(7, 1fr);
     width: 100vw;
     height: 100vh;
 }
 
-div {
+fieldset {
     text-align: center;
 }
 
@@ -32,31 +34,26 @@ div {
 }
 
 /* GRID POSITIONS */
-.trackMenuChannel1 {
+.trackMenu {
     grid-column: span 10;
-    grid-row-start: 6;
-    grid-row-end: 11;
-    background-color: aqua;
+    grid-row-start: 5;
+    grid-row-end: 9;
+    height: 24rem;
 }
 
-.trackMenuChannel2 {
-    grid-column: span 10;
-    grid-row-start: 6;
-    grid-row-end: 11;
-    background-color: purple;
-}
-
-.loadedTrackChannel1 {
-    display: grid;
+.trackChannel1 {
+    display: none;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-column-start: 2;
     grid-column-end: 5;
     grid-row-start: 2;
     grid-row-end: 4;
+    padding: 0px;
+    border: none;
 }
 
-.loadedTrackChannel1 img {
+.trackChannel1 img {
     height: 100%;
     grid-column-start: 1;
     grid-column-end: 1;
@@ -64,7 +61,7 @@ div {
     grid-row-end: 4;
 }
 
-.loadedTrackChannel1 p:nth-of-type(1) {
+.trackChannel1 p:nth-of-type(1) {
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 1;
@@ -72,7 +69,7 @@ div {
     font-size: 1vh;
 }
 
-.loadedTrackChannel1 p:nth-of-type(2) {
+.trackChannel1 p:nth-of-type(2) {
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 2;
@@ -80,17 +77,19 @@ div {
     font-size: 1vh;
 }
 
-.loadedTrackChannel2 {
-    display: grid;
+.trackChannel2 {
+    display: none;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-column-start: 6;
     grid-column-end: 9;
     grid-row-start: 2;
     grid-row-end: 4;
+    padding: 0px;
+    border: none;
 }
 
-.loadedTrackChannel2 img {
+.trackChannel2 img {
     height: 100%;
     grid-column-start: 1;
     grid-column-end: 1;
@@ -98,7 +97,7 @@ div {
     grid-row-end: 4;
 }
 
-.loadedTrackChannel2 p:nth-of-type(1) {
+.trackChannel2 p:nth-of-type(1) {
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 1;
@@ -106,7 +105,7 @@ div {
     font-size: 1vh;
 }
 
-.loadedTrackChannel2 p:nth-of-type(2) {
+.trackChannel2 p:nth-of-type(2) {
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 2;
@@ -116,25 +115,35 @@ div {
 
 
 .loadedTrackWaveform1 {
+    display: none;
     grid-column-start: 2;
     grid-column-end: 5;
     grid-row-start: 4;
-    grid-row-end: 6;
+    grid-row-end: 4;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    border: none;
+    padding: 0px
 }
 
 
 .loadedTrackWaveform2 {
+    display: none;
     grid-column-start: 6;
     grid-column-end: 9;
     grid-row-start: 4;
-    grid-row-end: 6;
+    grid-row-end: 4;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    border: none;
+    padding: 0px
 }
 
 #gain-1-group {
     grid-column-start: 4;
     grid-column-end: 4;
-    grid-row-start: 6;
-    grid-row-end: 6;
+    grid-row-start: 5;
+    grid-row-end: 5;
     align-self: center;
     justify-self: center;
     justify-items: center;
@@ -144,8 +153,8 @@ div {
 #gain-2-group {
     grid-column-start: 6;
     grid-column-end: 6;
-    grid-row-start: 6;
-    grid-row-end: 6;
+    grid-row-start: 5;
+    grid-row-end: 5;
     justify-self: center;
     justify-items: end;
 }
@@ -153,8 +162,8 @@ div {
 #high-freq-1-group {
     grid-column-start: 4;
     grid-column-end: 4;
-    grid-row-start: 7;
-    grid-row-end: 7;
+    grid-row-start: 6;
+    grid-row-end: 6;
     justify-self: center;
     justify-items: end;
 }
@@ -162,8 +171,8 @@ div {
 #high-freq-2-group {
     grid-column-start: 6;
     grid-column-end: 6;
-    grid-row-start: 7;
-    grid-row-end: 7;
+    grid-row-start: 6;
+    grid-row-end: 6;
     justify-self: center;
     justify-items: end;
 }
@@ -171,8 +180,8 @@ div {
 #mid-freq-1-group {
     grid-column-start: 4;
     grid-column-end: 4;
-    grid-row-start: 8;
-    grid-row-end: 8;
+    grid-row-start: 7;
+    grid-row-end: 7;
     justify-self: center;
     justify-items: end;
 }
@@ -180,8 +189,8 @@ div {
 #mid-freq-2-group {
     grid-column-start: 6;
     grid-column-end: 6;
-    grid-row-start: 8;
-    grid-row-end: 8;
+    grid-row-start: 7;
+    grid-row-end: 7;
     justify-self: center;
     justify-items: end;    
 }
@@ -189,8 +198,8 @@ div {
 #low-freq-1-group {
     grid-column-start: 4;
     grid-column-end: 4;
-    grid-row-start: 9;
-    grid-row-end: 9;
+    grid-row-start: 8;
+    grid-row-end: 8;
     justify-self: center;
     justify-items: end;    
 }
@@ -198,66 +207,57 @@ div {
 #low-freq-2-group {
     grid-column-start: 6;
     grid-column-end: 6;
-    grid-row-start: 9;
-    grid-row-end: 9;
+    grid-row-start: 8;
+    grid-row-end: 8;
     justify-self: center;
     justify-items: end;    
 }
 
-#trackMenuButton-1 {
+#trackMenuButton {
     grid-column-start: 2;
     grid-column-end: 4;
-    grid-row-start: 12;
-    grid-row-end: 12;
+    grid-row-start: 10;
+    grid-row-end: 11;
     justify-self: center;
+    justify-items: center;
 }
-
 
 #volumeSlider1 {
     grid-column-start: 4;
     grid-column-end: 4;
-    grid-row-start: 12;
-    grid-row-end: 12;
+    grid-row-start: 11;
+    grid-row-end: 11;
     justify-self: center;
 }
 
 #volumeSlider2 {
     grid-column-start: 6;
     grid-column-end: 6;
-    grid-row-start: 12;
-    grid-row-end: 12;
-    justify-self: center;
-}
-
-#trackMenuButton-2 {
-    grid-column-start: 8;
-    grid-column: span 2;
-    grid-column-end: 9;
-    grid-row-start: 12;
-    grid-row-end: 12;
+    grid-row-start: 11;
+    grid-row-end: 11;
     justify-self: center;
 }
 
 #tempoSlider1 {
     grid-column-start: 2;
     grid-column-end: 4;
-    grid-row-start: 15;
-    grid-row-end: 15;
+    grid-row-start: 13;
+    grid-row-end: 13;
     justify-self: center;
 }
 
 #cue1 {
     grid-column-start: 4;
     grid-column-end: 4;
-    grid-row-start: 14;
-    grid-row-end: 14;
+    grid-row-start: 13;
+    grid-row-end: 13;
     justify-self: center;
 }
 
 #start1 {
     grid-column-start: 4;
     grid-column-end: 4;
-    grid-row-start: 15;
+    grid-row-start: 14;
     grid-row-end: 15;
     justify-self: center;
 }
@@ -265,8 +265,8 @@ div {
 #channelSlider {
     grid-column-start: 4;
     grid-column-end: 7;
-    grid-row-start: 16;
-    grid-row-end: 16;
+    grid-row-start: 15;
+    grid-row-end: 15;
     justify-self: center;
     justify-items: end;
 }
@@ -274,24 +274,24 @@ div {
 #cue2 {
     grid-column-start: 6;
     grid-column-end: 6;
-    grid-row-start: 14;
-    grid-row-end: 14;
+    grid-row-start: 13;
+    grid-row-end: 13;
     justify-self: center;
 }
 
 #start2 {
     grid-column-start: 6;
     grid-column-end: 6;
-    grid-row-start: 15;
-    grid-row-end: 15;
+    grid-row-start: 14;
+    grid-row-end: 14;
     justify-self: center;
 }
 
 #tempoSlider2 {
     grid-column-start: 7;
     grid-column-end: 9;
-    grid-row-start: 15;
-    grid-row-end: 15;
+    grid-row-start: 13;
+    grid-row-end: 13;
     justify-self: center;
 }
 
@@ -439,49 +439,429 @@ input[type="checkbox"] {
     cursor: pointer;
 }
 
-#trackMenuButton-1:has(input[type=checkbox]) ~ span:nth-of-type(1) {
+#trackMenuButton:has(input[type=checkbox]) ~ fieldset:first-of-type {
     display: none;
 }
 
-#trackMenuButton-1:has(input[type=checkbox]:checked) ~ span:nth-of-type(1) {
-    display:grid
+#trackMenuButton:has(input[type=checkbox]:checked) ~ fieldset:first-of-type {
+    display:grid;
+    overflow-y:scroll;
 }
 
-#trackMenuButton-2:has(input[type=checkbox]) ~ span:nth-of-type(2) {
+/* Voeg styling toe vanaf het 6e element, HEEL BELANGRIJK VOOR HET MENU */
+#trackMenuButton:has(input[type=checkbox]:checked) ~ fieldset:nth-of-type(n+34) {
     display: none;
 }
 
-#trackMenuButton-2:has(input[type=checkbox]:checked) ~ span:nth-of-type(2) {
-    display:grid
-}
-
-#trackMenuButton-1:has(input[type=checkbox]:checked) ~ div {
-    display: none;
-}
-
-#trackMenuButton-2:has(input[type=checkbox]:checked) ~ div {
-    display: none;
-}
-
-#trackMenuButton-1:has(input[type=checkbox]:checked) ~ #trackMenuButton-2:has(input[type=checkbox]:checked) ~ span:nth-of-type(1) {
-    display: none;
-}
-
-#trackMenuButton-1:has(input[type=checkbox]:checked) + #trackMenuButton-2:has(input[type=checkbox]) {
-    display: none;
-}
-
-#trackMenuButton-1:has(input[type=checkbox]:checked) + #trackMenuButton-2:has(input[type=checkbox]:checked) {
+fieldset fieldset {
     display: grid;
+    grid-template-columns: 5rem 1fr 5rem 1fr;
+    grid-template-rows: repeat(16, 2.5rem);
+    padding: 0px;
 }
 
-#trackMenuButton-2:not(:has(input[type=checkbox]:checked)) + #trackMenuButton-1:has(input[type=checkbox]:checked) {
+fieldset fieldset label {
+    justify-self: center;
+    justify-items: center;
+    height: max-content;
+}
+
+fieldset fieldset p {
+    margin: 0px;
+}
+
+fieldset fieldset p:nth-of-type(odd) {
+    margin-top: 0.5rem;
+}
+
+fieldset fieldset p:nth-of-type(even) {
+    margin-bottom: 0.5rem;
+}
+
+
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(1) {
+    grid-area: 1 / 1 / span 2;
+}
+
+fieldset fieldset p:nth-of-type(1) {
+    grid-area: 1 / 2;
+}
+
+fieldset fieldset p:nth-of-type(2) {
+    grid-area: 2 / 2;
+}
+
+/* Track 1 - Channel 2 */
+fieldset fieldset label:nth-of-type(2) {
+    grid-area: 1 / 3 / span 2;
+}
+
+fieldset fieldset p:nth-of-type(3) {
+    grid-area: 1 / 4;
+}
+
+fieldset fieldset p:nth-of-type(4) {
+    grid-area: 2 / 4;
+}
+/* Track 2 - Channel 1 */
+fieldset fieldset label:nth-of-type(3) {
+    grid-area: 3 / 1 / span 2;
+}
+
+fieldset fieldset p:nth-of-type(5) {
+    grid-area: 3 / 2;
+}
+
+fieldset fieldset p:nth-of-type(6) {
+    grid-area: 4 / 2;
+}
+/* Track 2 - Channel 2 */
+fieldset fieldset label:nth-of-type(4) {
+    grid-area: 3 / 3 / span 2;
+}
+
+fieldset fieldset p:nth-of-type(7) {
+    grid-area: 3 / 4;
+}
+
+fieldset fieldset p:nth-of-type(8) {
+    grid-area: 4 / 4;
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(5) {
+    grid-area: 5 / 1 / span 2 ;
     
 }
 
-#trackMenuButton-1:has(input[type=checkbox]:checked):has(+ * + #trackMenuButton-2:has(input[type=checkbox])) ~ span:nth-of-type(2) {
-    display: none;
+fieldset fieldset p:nth-of-type(9) {
+    grid-area: 5 / 2;
+    
 }
+
+fieldset fieldset p:nth-of-type(10) {
+    grid-area: 6 / 2;
+    
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(6) {
+    grid-area: 5 / 3 / span 2 ;
+    
+}
+
+fieldset fieldset p:nth-of-type(11) {
+    grid-area: 5 / 4;
+    
+}
+
+fieldset fieldset p:nth-of-type(12) {
+    grid-area: 6 / 4;
+    
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(7) {
+    grid-area: 7 / 1 / span 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(13) {
+    grid-area: 7 / 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(14) {
+    grid-area: 8 / 2;
+    
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(8) {
+    grid-area: 7 / 3 / span 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(15) {
+    grid-area: 7 / 4;
+    
+}
+
+fieldset fieldset p:nth-of-type(16) {
+    grid-area: 8 / 4;
+    
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(9) {
+    grid-area: 9 / 1 / span 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(17) {
+    grid-area: 9 / 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(18) {
+    grid-area: 10 / 2;
+    
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(10) {
+    grid-area: 9 / 3 / span 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(19) {
+    grid-area: 9 / 4;
+    
+}
+
+fieldset fieldset p:nth-of-type(20) {
+    grid-area: 10 / 4;
+    
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(11) {
+    grid-area: 11 / 1 / span 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(21) {
+    grid-area: 11 / 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(22) {
+    grid-area: 12 / 2;
+    
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(12) {
+    grid-area: 11 / 3 / span 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(23) {
+    grid-area: 11 / 4;
+    
+}
+
+fieldset fieldset p:nth-of-type(24) {
+    grid-area: 12 / 4;
+    
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(13) {
+    grid-area: 13 / 1 / span 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(25) {
+    grid-area: 13 / 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(26) {
+    grid-area: 14 / 2;
+    
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(14) {
+    grid-area: 13 / 3 / span 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(27) {
+    grid-area: 13 / 4;
+    
+}
+
+fieldset fieldset p:nth-of-type(28) {
+    grid-area: 14 / 4;
+    
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(15) {
+    grid-area: 15 / 1 / span 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(29) {
+    grid-area: 15 / 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(30) {
+    grid-area: 16 / 2;
+    
+}
+/* Track 1 - Channel 1 */
+fieldset fieldset label:nth-of-type(16) {
+    grid-area: 15 / 3 / span 2;
+    
+}
+
+fieldset fieldset p:nth-of-type(31) {
+    grid-area: 15 / 4;
+    
+}
+
+fieldset fieldset p:nth-of-type(32) {
+    grid-area: 16 / 4;
+    
+}
+
+
+/*body:has(
+    main fieldset fieldset label:nth-of-type(1) input[type="radio"]:checked
+)
+> main {
+    display: none;
+}*/
+
+/* ARTIST AND TITLE */
+fieldset:has(fieldset label:nth-of-type(1) input[type="radio"]:checked) ~ fieldset:nth-of-type(2) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(2) input[type="radio"]:checked) ~ fieldset:nth-of-type(3) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(3) input[type="radio"]:checked) ~ fieldset:nth-of-type(4) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(4) input[type="radio"]:checked) ~ fieldset:nth-of-type(5) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(5) input[type="radio"]:checked) ~ fieldset:nth-of-type(6) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(6) input[type="radio"]:checked) ~ fieldset:nth-of-type(7) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(7) input[type="radio"]:checked) ~ fieldset:nth-of-type(8) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(8) input[type="radio"]:checked) ~ fieldset:nth-of-type(9) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(9) input[type="radio"]:checked) ~ fieldset:nth-of-type(10) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(10) input[type="radio"]:checked) ~ fieldset:nth-of-type(11) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(11) input[type="radio"]:checked) ~ fieldset:nth-of-type(12) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(12) input[type="radio"]:checked) ~ fieldset:nth-of-type(13) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(13) input[type="radio"]:checked) ~ fieldset:nth-of-type(14) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(14) input[type="radio"]:checked) ~ fieldset:nth-of-type(15) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(15) input[type="radio"]:checked) ~ fieldset:nth-of-type(16) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(16) input[type="radio"]:checked) ~ fieldset:nth-of-type(17) {
+    display: grid;
+}
+
+/* WAVEFORMS */
+
+fieldset:has(fieldset label:nth-of-type(1) input[type="radio"]:checked) ~ fieldset:nth-of-type(18) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(2) input[type="radio"]:checked) ~ fieldset:nth-of-type(19) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(3) input[type="radio"]:checked) ~ fieldset:nth-of-type(20) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(4) input[type="radio"]:checked) ~ fieldset:nth-of-type(21) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(5) input[type="radio"]:checked) ~ fieldset:nth-of-type(22) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(6) input[type="radio"]:checked) ~ fieldset:nth-of-type(23) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(7) input[type="radio"]:checked) ~ fieldset:nth-of-type(24) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(8) input[type="radio"]:checked) ~ fieldset:nth-of-type(25) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(9) input[type="radio"]:checked) ~ fieldset:nth-of-type(26) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(10) input[type="radio"]:checked) ~ fieldset:nth-of-type(27) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(11) input[type="radio"]:checked) ~ fieldset:nth-of-type(28) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(12) input[type="radio"]:checked) ~ fieldset:nth-of-type(29) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(13) input[type="radio"]:checked) ~ fieldset:nth-of-type(30) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(14) input[type="radio"]:checked) ~ fieldset:nth-of-type(31) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(15) input[type="radio"]:checked) ~ fieldset:nth-of-type(32) {
+    display: grid;
+}
+
+fieldset:has(fieldset label:nth-of-type(16) input[type="radio"]:checked) ~ fieldset:nth-of-type(33) {
+    display: grid;
+}
+
+fieldset label input[type="radio"] {
+    position: absolute;
+    cursor: pointer;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+fieldset label img {
+    width: 100%;
+}
+
+
+
 
 @media screen and (min-width: 800px) {
     .trackMenuButton {
@@ -489,14 +869,46 @@ input[type="checkbox"] {
     }
 }
 
-.loadedTrackWaveform1 img {
-    width: 100%;
-    max-height: fit-content;
+fieldset img {
     overflow-x: scroll;
+    overflow-y: hidden;
 }
 
-.loadedTrackWaveform2 img {
-    width: 100%;
-    max-height: fit-content;
-    overflow-x: scroll;
+#waveform-test-1 {
+    height: calc(60px * calc(var(--volume1) + calc(var(--low-freq-1) * 0.05) + calc(var(--mid-freq-1) * 0.05) + calc(var(--high-freq-1) * 0.05) + calc(var(--gain-1) * 0.2)));
+    width: calc(100% * var(--tempo1, .1));
+}
+
+#waveform-test-2 {
+    height: calc(60px * calc(var(--volume2) + calc(var(--low-freq-2) * 0.05) + calc(var(--mid-freq-2) * 0.05) + calc(var(--high-freq-2) * 0.05) + calc(var(--gain-2) * 0.2)));
+    width: calc(100% * var(--tempo2, .1));
+}
+
+.scrollbar {
+    overflow-x: auto; /* Show vertical scrollbar */
+    }
+    
+  .scrollbar::-webkit-scrollbar {
+    height: 5px;
+  }
+      
+  /* Track */
+  .scrollbar::-webkit-scrollbar-track {
+    background: none;
+  }
+       
+  /* Handle */
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 5px;
+  }
+      
+  /* Handle on hover */
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    border-radius: 5px;
+  }
+
+#track1 {
+    height: 5rem;
 }
